--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -10,7 +10,7 @@
   
   .logo {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 3rem;
+    font-size: 1.5rem;
     color: #FFF8E3;
     font-weight: bold;
     display: flex;
@@ -19,7 +19,7 @@
   }
 
   .logo img{
-    height: 70px;
+    height: 30px;
     margin-right: 10px;
   }
   
@@ -38,7 +38,7 @@
   .header a {
     text-decoration: none;
     font-size: 1.4rem;
-    color: #FFF8E3;
+    color: #ffeaf1;
   }
   
   .header a:hover,
@@ -47,10 +47,102 @@
     color: white;
   }
   
-  .badge {
+  /* .badge {
     background-color: #cc2062;
     color: white;
     border-radius: 12px;
     padding: 0 1rem;
     margin-left: 0.5rem;
+  } */
+
+  a:hover::before, li:hover > a::before {
+    visibility: visible;
+    transform: scaleX(1);
+  }
+  
+  a:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: -6px;
+    left: 0;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out 0s;
+    background-color: #fcf3f6;
+  }
+
+  a {
+    position: relative;
+    color: black;
+    text-decoration: none;
+    text-decoration-color: #FFF8E3;
+    transition: all 0.5s;
+  }
+
+  .hamburgerNav {
+    display: none;
+  }
+
+
+  @media only screen and (max-width:1290px) {
+    .desktopNav {
+      display: none;
+    }
+
+    .hamburgerNav {
+      display: flex;
+      overflow: hidden;
+    }
+
+    .header {
+      height: 5rem;
+    }
+
+    .hamburgerLinks{
+      position: absolute;
+      right: 0;
+      top: 4.5rem;
+      padding: 20px 20px;
+      background-color: #E8D8C4;
+      text-align: left;
+      border-radius: 4px;
+    }
+
+    .hamburgerLinks ul {
+      display: grid;
+      gap:  0.5rem;
+    }
+
+    .hamburgerLinks li {
+      margin:5px 0px;
+
+    }
+
+    .hamburgerLinks a {
+      text-decoration: none;
+      font-size: 1.2rem;
+      color: black;
+      margin: 0;
+    }
+
+    .hamburgerLinks a:hover::before,
+nav-links li:hover > a::before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
+a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -6px;
+  left: 0;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out 0s;
+  background-color: rgb(181, 181, 181);
+}
   }
