--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -6,6 +6,7 @@
     justify-content: space-between;
     background-color: #77002e;
     padding: 0 10% 0 3%;
+    overflow-x: hidden;
   }
   
   .logo {
