--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
   background-color: #fcf3f6;
+  
 }
 
 h1 {
@@ -19,4 +20,10 @@ h1 {
 h2 {
   font-size: 1.5rem;
   color: #2c292b;
+}
+
+@media only screen and (max-width:1290px) {
+  body {
+    overflow-x: hidden;
+  }
 }
